# bifrost

./: .dockerignore  .flake8  .gitignore  .pylintrc  COLLECTIONS.md  MASTER_SLAVE.md  README.md  README_old.md  ROADMAP.md  mypy.ini  publish.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: ci.yaml
bifrostrpc/: __init__.py  polyglot.py  typing.py
bifrostrpc/generators/: __init__.py  common.py  conversion.py  php.py  php2.py  python.py  python2.py  typescript.py
examples/: python_requests.py  typescript_fetch.ts
extras/: unit-test.Dockerfile
tests/: Dockerfile  conftest.py  test_FuncSpec.py  test_client_generation.py  test_conversion.py  test_get_type_spec.py  test_typing.py
tests/demo_service/: __init__.py  execute.py  generate.py  testutils.py
tests/demo_service/client_templates/: assertlib.ts  demo_HTTP_client.ts  demo_curl_client.php  demo_fetch_client.ts  mypy.ini  package-lock.json  package.json  requestsclient.py  tsconfig.json
tests/scenarios/: __init__.py  gadgets.py  pets.py  travellers.py  users.py
