[tool.poetry]
name = "bifrost-rpc"
version = "0.5.0"
description = ""
license = "MIT"
authors = []
packages = [
    { include = "bifrostrpc" }
]

[tool.poetry.dependencies]
python = "^3.6"
typing-extensions = {version = "^3.7.4", python = "<3.8"}
paradox-codegen = { git = "https://github.com/phodge/paradox.git", tag = "0.9.0" }
dataclasses = {version = "^0.7", python = "<3.7"}

[tool.poetry.dev-dependencies]
mypy = "^0.901"
flake8 = "^3.8.4"
pytest = "^5.4.3"
pylint = "^2.6.0"
# these are required for pylint to run
pytoml = "^0.1.21"
Flask = "^1.1.2"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36,py37,py38

[testenv]
deps = -rrequirements_dev.txt
commands = pytest
"""

[build-system]
requires = ["setuptools>=40.0", "wheel", "pytoml"]
