[tool.poetry]
name = "bifrost-rpc"
version = "0.6.4"
description = ""
license = "MIT"
authors = []
packages = [
    { include = "bifrostrpc" }
]
# make sure py.typed files are included when installing via poetry (setup.py does this differently)
include = ["py.typed"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
typing-extensions = {version = "^3.7.4", python = "<3.8"}
paradox-codegen = { git = "https://github.com/phodge/paradox.git", tag = "0.12.1" }

[tool.poetry.dev-dependencies]
mypy = "^0.901"
flake8 = "^3.8.4"
pytest = "^6.0.0"
pylint = "^2.6.0"
# these are required for pylint to run
pytoml = "^0.1.21"
Flask = "^2.2.2"
types-dataclasses = "^0.6.1"
types-Flask = "^1.1.5"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36,py37,py38

[testenv]
deps = -rrequirements_dev.txt
commands = pytest
"""

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
